fixing Bug #244587 Allow user to use env variables in Wizard's text fields

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/SelectBinaryPanelVisual.form
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/SelectBinaryPanelVisual.form
@@ -205,7 +205,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new EditableComboBox();"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new ExpandableEditableComboBox();"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
