--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/SelectModePanel.form
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/ui/wizards/SelectModePanel.form
@@ -224,7 +224,7 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="sourceFolder">
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new EditableComboBox();"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new ExpandableEditableComboBox();"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
