--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/LaunchersPanel.form
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/launchers/actions/ui/LaunchersPanel.form
@@ -164,9 +164,10 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jScrollPane1" pref="609" max="32767" attributes="0"/>
                       <Component id="envVarScrollPane" alignment="1" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -176,22 +177,21 @@
                               <Component id="symbolLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="launcherNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="runDirTextField" alignment="0" max="32767" attributes="0"/>
-                              <Component id="buildTextField" alignment="0" max="32767" attributes="0"/>
-                              <Component id="runTextField" alignment="0" max="32767" attributes="0"/>
-                              <Component id="symbolsTextField" alignment="1" max="32767" attributes="0"/>
-                              <Component id="launcherNameTextField" alignment="0" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="launcherNameTextField" max="32767" attributes="0"/>
+                              <Component id="symbolsTextField" max="32767" attributes="0"/>
+                              <Component id="runDirTextField" max="32767" attributes="0"/>
+                              <Component id="buildTextField" alignment="1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <Group type="102" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
                           <Component id="envLabel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="publicCheckBox" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="240" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="addEnvButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="removeEnvButton" min="-2" max="-2" attributes="0"/>
@@ -209,12 +209,11 @@
                       <Component id="launcherNameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="launcherNameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="runTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="runLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="runLabel" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
+                  <Component id="jScrollPane1" pref="109" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="buildLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="buildTextField" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -224,7 +223,7 @@
                       <Component id="runDirLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="runDirTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="symbolLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="symbolsTextField" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -232,7 +231,7 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="envLabel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
-                  <Component id="envVarScrollPane" pref="245" max="32767" attributes="0"/>
+                  <Component id="envVarScrollPane" pref="139" max="32767" attributes="0"/>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="addEnvButton" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -271,13 +270,6 @@
             </Property>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
               <ResourceString bundle="org/netbeans/modules/cnd/makeproject/launchers/actions/ui/Bundle.properties" key="LaunchersPanel.runLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="runTextField">
-          <Properties>
-            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[300, 2147483647]"/>
             </Property>
           </Properties>
         </Component>
@@ -388,6 +380,26 @@
             </Property>
           </Properties>
         </Component>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JTextArea" name="runTextField">
+              <Properties>
+                <Property name="columns" type="int" value="20"/>
+                <Property name="lineWrap" type="boolean" value="true"/>
+                <Property name="rows" type="int" value="5"/>
+                <Property name="wrapStyleWord" type="boolean" value="true"/>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[360, 17]"/>
+                </Property>
+              </Properties>
+            </Component>
+          </SubComponents>
+        </Container>
       </SubComponents>
     </Container>
   </SubComponents>
