--- a/maven.graph/src/org/netbeans/modules/maven/graph/FixVersionConflictPanel.form
+++ b/maven.graph/src/org/netbeans/modules/maven/graph/FixVersionConflictPanel.form
@@ -237,7 +237,7 @@
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
               <ResourceString bundle="org/netbeans/modules/maven/graph/Bundle.properties" key="FixVersionConflictPanel.conflictL.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;, {arguments})">
-                <Argument index="0" javacode="conflictNode.getDependencyNode().getArtifact().getArtifactId()"/>
+                <Argument index="0" javacode="conflictNode.getImpl().getArtifact().getArtifactId()"/>
                 <Argument index="1" javacode="getClashingVersionsAsText()"/>
               </ResourceString>
             </Property>
